--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html" class="active">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="about.html">About</a>
@@ -36,7 +36,7 @@
                         <a href="register.html">Sign Up</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html" class="currentPage">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -47,23 +47,15 @@
                     </a>
                 </div>
             </div>
-            <h2>Northside Youth Soccer League</h2>
+            <h2>Contact Links</h2>
         </header>
         <div>
             <aside>
-                <img src="images/soccer_image1.jpg">
+                <img src="images/soccer_image3.jpg">
             </aside>
             <main>
-                <article>
-                    <dl>
-                        <dt>August 4</dt>
-                        <dd>NYSL Fundraiser</dd>
-                        <dt>August 16</dt>
-                        <dd>Season Kick-off. Meet the Teams</dd>
-                        <dt>September 1</dt>
-                        <dd>First Game of the Season (Check Game Schedule for details)</dd>
-                    </dl>
-                </article>
+                <p>Please email us at <a href="mailto:nysl@chisoccer.org">nysl@chisoccer.org</a></p>
+                <p>We will reply to your email as soon as we can.</p>
             </main>
         </div>
     </div>
