--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html" class="active">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html" class="active">About</a>
                     </li>
                     <li>
                         <a href="schedule.html">Schedule</a>
@@ -47,22 +47,20 @@
                     </a>
                 </div>
             </div>
-            <h2>Northside Youth Soccer League</h2>
+            <h2>About NYSL</h2>
         </header>
         <div>
             <aside>
-                <img src="images/soccer_image1.jpg">
+                <img src="images/soccer_image2.jpg">
             </aside>
             <main>
                 <article>
-                    <dl>
-                        <dt>August 4</dt>
-                        <dd>NYSL Fundraiser</dd>
-                        <dt>August 16</dt>
-                        <dd>Season Kick-off. Meet the Teams</dd>
-                        <dt>September 1</dt>
-                        <dd>First Game of the Season (Check Game Schedule for details)</dd>
-                    </dl>
+                    <h3>Mission</h3>
+                    <p>To support young athletes living in Chicagos northside neighborhoods, who have an interest in learing and playing soccer, specifically those skills around team cooperation and good sportsmanship.</p>
+                    <h3>Vision</h3>
+                    <p>The Northside Youth Soccer League aspires to develop strong, well-rounded, and mindful athletes through building of character, self-discipline, and leadership.</p>
+                    <h3>General Information</h3>
+                    <p>The Northside Youth Soccer League was established in 1996 to provide athletes residing in Chicago's northside neighborhoods an environment in which to learn and play soccer. To be a member of NYSL, you must be between ages of 4-12 and reside in a Chicago northside neighborhood. NYSL is run by a small full-time staff, and relies on the generous volunteer time of parents and previous league members.</p>
                 </article>
             </main>
         </div>
